documentation moved to readme